--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,10 @@ h2 {
 .map__wrap iframe {
   width: 100%;
 }
+figure {
+  margin-top: 30px;
+  text-align: center;
+}
 .box__wrap + .box__wrap {
   margin-top: 25px;
 }
